Use -webkit-appearance: none to fix date input height on iOS Safari

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -59,7 +59,9 @@ body {
   }
 
   input[type="date"].input-field {
-    @apply h-10;
+    -webkit-appearance: none;
+    appearance: none;
+    @apply h-10 leading-6;
   }
 
   .card {
